--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 #startBtn {
     position: absolute;
-    top: 400px;
+    top: 300px;
     left: 1000px;
     width: 200px;
     height: 50px;
@@ -19,7 +19,7 @@ body {
 
   #pauseBtn {
       position: absolute;
-      top: 500px;
+      top: 400px;
       left: 1000px;
       width: 200px;
       height: 50px;
@@ -28,10 +28,38 @@ body {
     
   #stepBtn {
     position: absolute;
-    top: 600px;
+    top: 500px;
     left: 1000px;
     width: 200px;
     height: 50px;
     font-size: 20px;
   }
+  
+  #speedBtnDown {
+    position: absolute;
+    top: 250px;
+    left: 1050px;
+    font-size: 20px;
+  }
 
+  #speedBtnUp {
+    position: absolute;
+    top: 125px;
+    left: 1050px;
+    font-size: 20px;
+  }
+
+  #speedDisplay {
+    position: absolute;
+    top: 170px;
+    left: 1050px;
+    font-size: 50px;
+    color: white;
+  }
+
+  #speedSlider {
+    position: absolute;
+    top: 125px;
+    left: 1025px;
+    font-size: 20px;
+  }
