--- a/styles.css
+++ b/styles.css
@@ -10,29 +10,35 @@ body {
 
 #startBtn {
     position: absolute;
+    border-radius: 50px;
     top: 300px;
     left: 1000px;
     width: 200px;
     height: 50px;
     font-size: 20px;
+    cursor: pointer;
   }
 
   #pauseBtn {
       position: absolute;
+      border-radius: 50px;
       top: 400px;
       left: 1000px;
       width: 200px;
       height: 50px;
       font-size: 20px;
+      cursor: pointer;
     }
     
   #stepBtn {
     position: absolute;
+    border-radius: 50px;
     top: 500px;
     left: 1000px;
     width: 200px;
     height: 50px;
     font-size: 20px;
+    cursor: pointer;
   }
   
   #speedBtnDown {
@@ -52,14 +58,22 @@ body {
   #speedDisplay {
     position: absolute;
     top: 170px;
-    left: 1050px;
+    left: 1040px;
     font-size: 50px;
-    color: white;
+    color: lightgray;
   }
 
   #speedSlider {
     position: absolute;
     top: 125px;
-    left: 1025px;
+    left: 1030px;
+    font-size: 20px;
+  }
+
+  #sliderName {
+    color: white;
+    position: absolute;
+    top: 100px;
+    left: 1040px;
     font-size: 20px;
   }
