--- a/styles.css
+++ b/styles.css
@@ -60,14 +60,14 @@ body {
     position: absolute;
     top: 170px;
     left: 1040px;
-    font-size: 50px;
+    font-size: 60px;
     color: lightgray;
   }
 
   #speedSlider {
     position: absolute;
     top: 125px;
-    left: 1030px;
+    left: 1040px;
     font-size: 20px;
   }
 
@@ -75,7 +75,7 @@ body {
     color: white;
     position: absolute;
     top: 100px;
-    left: 1040px;
+    left: 1050px;
     font-size: 20px;
   }
 
@@ -85,4 +85,19 @@ body {
     font-size: 18px;
     top: 600px;
     left: 1000px;
+  }
+
+  #imgSizer {
+    position: absolute;
+    top: 285px;
+    left: 1300px;
+    max-width: 25%
+  }
+
+  #titleBanner {
+    position: absolute;
+    color: white;
+    font-size: 18px;
+    top: 100px;
+    left: 1300px;
   }
